Fix the main-page alignment

--- a/extensions-web/ClientApp/src/custom.css
+++ b/extensions-web/ClientApp/src/custom.css
@@ -29,11 +29,12 @@ a:-webkit-any-link {
   text-decoration: none;
 }
 
+
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #f5f5f5;
-  text-align: center;
+  text-align: left;
   padding: 10px;
 }
